tests/cases_invalid/generics/structs/.expected
error: could not find `Undefined` type
 --> ./cases_invalid/generics/structs/main.shd:5:37
  |
5 | struct UndefinedGenericConstType<N: Undefined> {
  |                                     ^^^^^^^^^ undefined type
  |

error: unsupported type `Data` in `const` context, expected `u32`, `i32`, `f32` or `bool`
 --> ./cases_invalid/generics/structs/main.shd:9:35
  |
9 | struct InvalidGenericConstType<N: Data> {
  |                                   ^^^^ unsupported type
  |

error: generic parameter with name `T` is defined multiple times
  --> ./cases_invalid/generics/structs/main.shd:13:32
   |
13 | struct DuplicatedGenericParams<T, U, T: u32, U: u32> {
   |                                ^     - info: generic parameter with same name is defined here
   |                                |
   |                                duplicated generic parameter name
   |

error: generic parameter with name `U` is defined multiple times
  --> ./cases_invalid/generics/structs/main.shd:13:35
   |
13 | struct DuplicatedGenericParams<T, U, T: u32, U: u32> {
   |                                   ^          - info: generic parameter with same name is defined here
   |                                   |
   |                                   duplicated generic parameter name
   |
